--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "files": [
     "build"
-  ]
+  ],
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.8.0",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "typescript": "^5.8.2"
+  }
 }
